@@ -35,46 +35,70 @@ is( $dialog->get('increment'), 1, 'default step for empty document' );
 #########################
 
 $slist = Gscan2pdf::Document->new;
-@{ $slist->{data} } = ( [ 1, undef, undef ], [ 2, undef, undef ] );
-$slist->select(1);
-my @selected = $slist->get_selected_indices;
-is_deeply( \@selected, [1], 'selected' );
-
-$dialog->set( 'range',    'selected' );
-$dialog->set( 'document', $slist );
-is( $dialog->get('start'),     2, 'start for document with start clash' );
-is( $dialog->get('increment'), 1, 'step for document with start clash' );
-
-#########################
-
-@{ $slist->{data} } = (
-    [ 1, undef, undef ],
-    [ 3, undef, undef ],
-    [ 5, undef, undef ],
-    [ 7, undef, undef ]
+system('convert rose: test.pnm');
+my $dir     = File::Temp->newdir;
+my %options = (
+    filename    => 'test.pnm',
+    xresolution => 72,
+    yresolution => 72,
+    page        => 1,
+    dir         => $dir,
 );
-$slist->select( 2, 3 );
-@selected = $slist->get_selected_indices;
-is_deeply( \@selected, [ 2, 3 ], 'selected' );
-$dialog->set( 'range', 'selected' );
-is( $dialog->get('start'), 4, 'start for document with start and step clash' );
-is( $dialog->get('increment'),
-    1, 'step for document with start and step clash' );
+$slist->import_scan(%options);
+$options{page} = 2;
+my $loop1 = Glib::MainLoop->new;
+$options{finished_callback} = sub {
+    $slist->select(1);
+    my @selected = $slist->get_selected_indices;
+    is_deeply( \@selected, [1], 'selected' );
+
+    $dialog->set( 'range',    'selected' );
+    $dialog->set( 'document', $slist );
+    is( $dialog->get('start'),     2, 'start for document with start clash' );
+    is( $dialog->get('increment'), 1, 'step for document with start clash' );
+    $loop1->quit;
+};
+$slist->import_scan(%options);
+$loop1->run;
 
 #########################
 
-$dialog->set( 'increment', 0 );
-is( $dialog->get('start'),     4,  'start for document with negative step' );
-is( $dialog->get('increment'), -2, 'step for document with negative step' );
-$dialog->signal_connect(
-    'before-renumber' => sub {
-        pass('before-renumber signal fired on renumber');
-    }
-);
-$dialog->renumber;
+$slist->{data}[1][0] = 3;
+$options{page} = 5;
+delete $options{finished_callback};
+$slist->import_scan(%options);
+$options{page} = 7;
+my $loop2 = Glib::MainLoop->new;
+$options{finished_callback} = sub {
+    $slist->select( 2, 3 );
+    my @selected = $slist->get_selected_indices;
+    is_deeply( \@selected, [ 2, 3 ], 'selected' );
+    $dialog->set( 'range', 'selected' );
+    is( $dialog->get('start'),
+        4, 'start for document with start and step clash' );
+    is( $dialog->get('increment'),
+        1, 'step for document with start and step clash' );
 
 #########################
 
+    $dialog->set( 'increment', 0 );
+    is( $dialog->get('start'), 4, 'start for document with negative step' );
+    is( $dialog->get('increment'), -2, 'step for document with negative step' );
+    $dialog->signal_connect(
+        'before-renumber' => sub {
+            pass('before-renumber signal fired on renumber');
+        }
+    );
+    $dialog->renumber;
+    $loop1->quit;
+};
+$slist->import_scan(%options);
+$loop1->run;
+
+#########################
+
+unlink 'test.pnm';
+rmdir $dir;
 Gscan2pdf::Document->quit();
 
 __END__
