@@ -2,6 +2,7 @@
 
 * Pass resolution to tesseract to avoid messages like
   "Warning! Invalid resolution 0 dpi. Using 70 instead"
+* Cope better if data model becomes corrupted
 * Update to Hungarian translation (thanks to csola)
 
 
